# rendrs

./: Cargo.toml
src/: batch.rs  framebuffer.rs  lib.rs  pipeline.rs
src/pack/: glsl.rs  mod.rs
