[package]
name = "rendrs"
version = "0.1.0"
edition = "2024"

[dependencies]
ethel = { path = "../ethel" }
janus = { path = "../janus", default-features = false, features = ["expose_gl", "textures"] }
thiserror = "2.0.18"
tinyvec = "1.12.0"

[features]
default = ["framebuffer", "batching"]
framebuffer = []
batching = []
